- sudah berhasil push data ke database - fab menunjukkan gambar love dgn baik - membuat page favorite tapi msh gagal memperlihatkan isi dr database

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,16 @@
         app:layout_constraintTop_toTopOf="parent">
     </com.google.android.material.search.SearchBar>
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/favorite"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/switch_theme"
+        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_user"
         android:layout_width="match_parent"
@@ -39,7 +49,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch_theme"/>
+        app:layout_constraintTop_toBottomOf="@+id/switch_theme">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.search.SearchView
         android:id="@+id/searchView"
@@ -51,6 +63,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
     </com.google.android.material.search.SearchView>
 
     <ProgressBar
